# urex-binary-io

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  reader.rs  writer.rs
