[package]
name = "urex-binary-io"
version = "0.1.0"
edition = "2021"
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "Implementation of an endianed BinaryReaders for use in urex."
documentation = "TODO"
readme = "README.md"
homepage = "TODO"
repository = "https://github.com/UnityRustEXtractor/urex-binary-io"
license = "MIT"
exclude = [".git*"]

[dependencies]
half = "2.2.1"
paste = "1.0.12"
