[package]
name = "urex-binary-io"
version = "0.1.0"
edition = "2021"
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "Implementation of an endianed BinaryReaders for use in urex."
readme = "README.md"
homepage = "https://crates.io/crates/urex-binary-io"
repository = "https://github.com/UnityRustEXtractor/urex-binary-io"
documentation = "https://docs.rs/crate/urex-binary-io"
license = "MIT"
exclude = [".git*"]

[dependencies]
half = "2.2.1"
paste = "1.0.12"
